# CodeProject

./: .gitmodules  README.md
C++/: .gitignore  CMakeLists.txt  README.md
C++/src/: summertime.cc
C++/src/include/: luckynum.h
C++/src/tools/: luckynum.cc
C++/test/: CMakeLists.txt
C++/test/unitest/: lucknum_test.cc
Qt/Serial_Port_Debug_Tool_V1_[QML]/: Config.qml  PageForm.qml  backend.cpp  backend.h  main.qml  qml.qrc  qmldir
Qt/Serial_Port_Debug_Tool_V2_[QML]/: Config.qml  Page_Config.qml  Page_Debug.qml  Page_Usage.qml  Serial_Com_Prototype.pro  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
Qt/Serial_Port_Debug_Tool_V3_[QWidget]/: Iwpriv_Usage_V1.0.txt  NEW_Iwpriv.pro  NEW_Iwpriv.pro.user.89fd738  NEW_Iwpriv.pro.user.96e5e32  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  serialcom.cpp  serialcom.h  serialconsole.cpp  serialconsole.h  seriallog.cpp  seriallog.h
Qt/Serial_Port_Debug_Tool_V3_[QWidget]/Backup/: qss_(in the project).txt  qss_(not in the project).txt
Qt/Serial_Port_Debug_Tool_V4_[QWidget]/: RTK_WDT.pro  resource.qrc
Qt/Serial_Port_Debug_Tool_V4_[QWidget]/inc/: mainwindow.h  packagedialog.h  scriptworker.h  serialcom.h  serialconsole.h  seriallog.h
Qt/Serial_Port_Debug_Tool_V4_[QWidget]/src/: main.cpp  mainwindow.cpp  packagedialog.cpp  scriptworker.cpp  serialcom.cpp  serialconsole.cpp  seriallog.cpp
Qt/Serial_Port_Debug_Tool_V4_[QWidget]/ui/: mainwindow.ui  packagedialog.ui
Qt/WMS_Monitor_Tool_[QWidget]/: main.cpp  resource.qrc  version4.pro
Qt/WMS_Monitor_Tool_[QWidget]/dao/: basedao.cpp  basedao.h  (+10 more)
(+56 files in other folders)
